Fix icon location on Firefox/Chrome

--- a/gcampus/core/static_src/styles/_icon.scss
+++ b/gcampus/core/static_src/styles/_icon.scss
@@ -59,6 +59,7 @@
 
     .indicator-icon {
       position: absolute;
+      bottom: 0;
       z-index: 0;
 
       &:hover {
